# PaperSmith

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  styles.css  tailwind.config.js  tailwind.css
.github/workflows/: gen-hash.yml  hashes.yml  main.yml  release.yml
shared/src/: lib.rs
src/: app.rs  compile_container_zoom_handlers.rs  edit_container_zoom_handlers.rs  font_size_handlers.rs  main.rs  markdown_handler.rs  sidebar.rs  text_alignment_handlers.rs  text_styling_handlers.rs  zoom_handlers.rs  zoom_level_handlers.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/checking/: mod.rs
src-tauri/src/loader/: mod.rs
src-tauri/src/menu/: mod.rs
src-tauri/src/saving/: mod.rs
src/menubar/text/: font_size_handlers.rs  text_alignment_handlers.rs  text_styling_handlers.rs
src/menubar/zoom/: compile_container_zoom_handlers.rs  zoom_handlers.rs
src/modal-system/: modal.rs
src/notepad/: notepad.rs  single_view.rs  split_view.rs  zoom_handlers.rs
src/project-wizard/: wizard.rs
src/settings-menu/: settings.rs  switcher.rs
src/sidebar/: buttons.rs  chevron.rs  deleting.rs  dropdown.rs  renaming.rs  sidebar.rs
src/statistics/: char_count.rs  session_time.rs  statistic.rs  word_count.rs  wpm.rs
src/theme-switcher/: switcher.rs
src/toolbar/: toolbar.rs
writedown/: next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
writedown/src-tauri/: tauri.conf.json
