[package]
name = "papersmith-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.69", features = ["HtmlElement", "HtmlInputElement", "console"] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
# TODO: Find Spell-Check icon (It's not LucideSpellCheck for some reason)
yew_icons = {version = "0.8", features = ["LucidePlus", "LucideMinus", "LucideBold", "LucideItalic", "LucideUnderline", "LucideAlignCenter", "LucideAlignJustify", "LucideAlignLeft", "LucideAlignRight", "LucideHighlighter", "LucideUndo", "LucideRedo", "LucideBaseline", "LucideList", "LucideListChecks"]}

log = "0.4.21"
gloo-timers = "0.3.0"
yew-hooks = "0.3.2"
gloo-console = "0.3.0"


[workspace]
members = ["src-tauri"]