[package]
name = "papersmith-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
shared = { path = "shared" }
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.69", features = [
  "HtmlElement",
  "HtmlInputElement",
  "HtmlButtonElement",
  "CssStyleDeclaration",
  "HtmlDocument",
  "console",
  "Document",
  "Node",
  "Range",
  "Selection",
  "Window",
  "Element",
] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
# TODO: Find Spell-Check icon (It's not LucideSpellCheck for some reason)
yew_icons = { version = "0.8", features = [
  "LucideChevronDown",
  "LucideAlignCenter",
  "LucideAlignJustify",
  "LucideAlignLeft",
  "LucideAlignRight",
  "LucideBaseline",
  "LucideBold",
  "LucideEdit3",
  "LucideFileDown",
  "LucideFilePlus",
  "LucideFolder",
  "LucideFolderOpen",
  "LucideHighlighter",
  "LucideItalic",
  "LucideList",
  "LucideListChecks",
  "LucideMinus",
  "LucidePlus",
  "LucideQuote",
  "LucideRedo",
  "LucideSave",
  "LucideTrash2",
  "LucideUnderline",
  "LucideUndo",
  "LucideZoomIn",
  "LucideZoomOut",
] }
gloo-timers = "0.3.0"
yew-hooks = "0.3.2"
gloo-console = "0.3.0"
chrono = "0.4.38"
text_io = "0.1.12"
pulldown-cmark = "0.12.2"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
gloo = "0.11.0"

[workspace]
members = ["shared", "src-tauri"]
